--- a/Content/tailwind.css
+++ b/Content/tailwind.css
@@ -690,6 +690,22 @@ video {
   top: 1.5rem;
 }
 
+.top-\[\] {
+  top: ;
+}
+
+.top-\[5rem\] {
+  top: 5rem;
+}
+
+.top-\[81px\] {
+  top: 81px;
+}
+
+.top-\[82px\] {
+  top: 82px;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -710,14 +726,6 @@ video {
   margin: 3.5rem;
 }
 
-.m-auto {
-  margin: auto;
-}
-
-.m-16 {
-  margin: 4rem;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -731,16 +739,6 @@ video {
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
-}
-
-.mx-14 {
-  margin-left: 3.5rem;
-  margin-right: 3.5rem;
-}
-
-.mx-0 {
-  margin-left: 0px;
-  margin-right: 0px;
 }
 
 .mt-4 {
@@ -843,8 +841,8 @@ video {
   height: 5rem;
 }
 
-.h-\[79\.5px\] {
-  height: 79.5px;
+.h-\[79px\] {
+  height: 79px;
 }
 
 .h-2 {
@@ -861,6 +859,18 @@ video {
 
 .h-3\/6 {
   height: 50%;
+}
+
+.h-\[5re5m\] {
+  height: 5re5m;
+}
+
+.h-\[\] {
+  height: ;
+}
+
+.h-\[79pxrem\] {
+  height: 79pxrem;
 }
 
 .w-\[300px\] {
@@ -917,18 +927,6 @@ video {
 
 .max-w-7xl {
   max-width: 80rem;
-}
-
-.max-w-6xl {
-  max-width: 72rem;
-}
-
-.max-w-4xl {
-  max-width: 56rem;
-}
-
-.max-w-3xl {
-  max-width: 48rem;
 }
 
 .flex-auto {
@@ -1059,10 +1057,6 @@ video {
 
 .border-2 {
   border-width: 2px;
-}
-
-.border {
-  border-width: 1px;
 }
 
 .border-b-2 {
