--- a/Content/Site.css
+++ b/Content/Site.css
@@ -1,30 +1,44 @@
-/* Move down content because we have a fixed navbar that is 50px tall */
-body {
-  padding-top: 50px;
-  padding-bottom: 20px;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.table-header-cell {
+  @apply font-medium text-[14px] p-[16px] relative;
 }
 
-/* Wrapping element */
-/* Set some basic padding to keep content from hitting the edges */
-.body-content {
-  padding-left: 15px;
-  padding-right: 15px;
+.table-header-cell:after {
+  position: absolute;
+  border-right: 1px solid #ebebeb;
+  content: "";
+  top: 25%;
+  bottom: 25%;
+  right: 0px;
 }
 
-/* Set widths on the form inputs since otherwise they're 100% wide */
-input,
-select,
-textarea {
-  max-width: 280px;
+.table-header-cell:last-child:after {
+  border-right: 0px;
 }
 
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  .jumbotron {
-    margin-top: 20px;
-  }
+.table-cell {
+  @apply p-[16px] text-[14px];
+}
 
-  .body-content {
-    padding: 0;
-  }
+.text-input {
+  @apply px-3 py-2 border rounded-lg transition-colors duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-accent;
+}
+
+.file-upload-input {
+  @apply bg-[#fafafa] border border-[#ebebeb] border-dashed flex flex-col py-10 px-8 transition-colors ease-in-out text-[#3d3d3d] duration-200 justify-center items-center hover:border-accent hover:bg-white;
+}
+
+.badge-purple {
+  @apply bg-[#efdeff] font-medium text-accent text-[12px] px-2 py-1 border border-accent border-opacity-40 rounded-3xl;
+}
+
+.edit-link {
+}
+
+.edit-link:after {
+  background: url("https://api.iconify.design/noto:pencil.svg") no-repeat center
+    center / contain;
 }
